; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_ppb_1284.c_ppb_1284_set_error.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_ppb_1284.c_ppb_1284_set_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ppb_data = type { i32, i64 }

@PPB_NO_ERROR = common dso_local global i32 0, align 4
@PPB_ERROR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @ppb_1284_set_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ppb_1284_set_error(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.ppb_data*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.ppb_data* @DEVTOSOFTC(i32 %8)
  store %struct.ppb_data* %9, %struct.ppb_data** %7, align 8
  %10 = load %struct.ppb_data*, %struct.ppb_data** %7, align 8
  %11 = getelementptr inbounds %struct.ppb_data, %struct.ppb_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* @PPB_NO_ERROR, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %28

15:                                               ; preds = %3
  %16 = load %struct.ppb_data*, %struct.ppb_data** %7, align 8
  %17 = getelementptr inbounds %struct.ppb_data, %struct.ppb_data* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @PPB_ERROR, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %28

21:                                               ; preds = %15
  %22 = load i32, i32* %5, align 4
  %23 = load %struct.ppb_data*, %struct.ppb_data** %7, align 8
  %24 = getelementptr inbounds %struct.ppb_data, %struct.ppb_data* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 8
  %25 = load i64, i64* @PPB_ERROR, align 8
  %26 = load %struct.ppb_data*, %struct.ppb_data** %7, align 8
  %27 = getelementptr inbounds %struct.ppb_data, %struct.ppb_data* %26, i32 0, i32 1
  store i64 %25, i64* %27, align 8
  br label %28

28:                                               ; preds = %21, %15, %3
  ret i32 0
}

declare dso_local %struct.ppb_data* @DEVTOSOFTC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
